--- a/2019-10-ISEM/2019-10-ISEM.Rmd
+++ b/2019-10-ISEM/2019-10-ISEM.Rmd
@@ -8,7 +8,6 @@ output:
     lib_dir: libs
     nature:
       beforeInit: "macros.js"
-      ratio: "16:9"
       highlightStyle: solarized-light
       highlightLines: true
       countIncrementalSlides: false
@@ -18,27 +17,8 @@ output:
        - xaringan-themer.css
        - assets/css/custom.css
        - assets/css/tachyons.min.css
+       - assets/css/extra.css
 ---
-
-```{r xaringan-themer, include = FALSE}
-options(htmltools.dir.version = FALSE)
-library(icon)
-library(xaringanthemer)
-library(magrittr)
-library(flextable)
-solarized_light(
-  header_font_google = google_font("Josefin Sans"),
-  text_font_google   = google_font("Montserrat", "500", "400i"),
-  code_font_google   = google_font("Droid Mono"),
-  title_slide_background_color = "#002733",
-  link_color = "#eb1455",
-  text_bold_color = "#00589a",
-  text_font_size = "25px",
-  header_color = "#002733",
-  padding = "1em 2em 1em 2em"
-  
-)
-```
 
 class: title-slide  
 
@@ -76,7 +56,7 @@ ISEM 2019, October 4th 2019, Salzburg, Austria
 
 ---
 
-# About me
+### About me
 
 .pull-left[
 
@@ -98,7 +78,7 @@ knitr::include_graphics("https://pjs-web.de/authors/admin/avatar_hud979e34f5123f
 knitr::include_graphics("https://raw.githubusercontent.com/mlr-org/mlr/master/man/figures/logo_navbar.png")
 ```
 
-### personal focus
+### Personal focus
 
 - open-source enthusiast
 - reproducible research
@@ -156,7 +136,7 @@ knitr::include_graphics("https://raw.githubusercontent.com/pat-s/2019-feature-se
 ```
 
 .large[
-&emsp;&emsp; 10 % &emsp;&emsp;&emsp;&emsp;&emsp; 20 %  &emsp;&emsp;&emsp;&emsp;&ensp; 40%  &emsp;&emsp;&emsp;&emsp; 60-70%
+&emsp; 10 % &emsp;&emsp;&emsp; 20 %  &emsp;&emsp;&emsp; 40%  &emsp;&emsp; 60-70%
 ]
 
 ---
@@ -182,6 +162,7 @@ knitr::include_graphics("https://raw.githubusercontent.com/pat-s/2019-feature-se
 
 <center>NDVI of Laukiz 1</center>
 ]
+
 ---
 
 # Feature Set Creation
@@ -194,6 +175,7 @@ knitr::include_graphics("https://raw.githubusercontent.com/pat-s/2019-feature-se
 
   $NRIᵢⱼ = \frac{bᵢ - bⱼ}{bᵢ + bⱼ}$
   
+<hr>
 
 .pull-left[
 - **HR** (hyperspectral reflectances)
@@ -215,7 +197,8 @@ knitr::include_graphics("https://raw.githubusercontent.com/pat-s/2019-feature-se
 
 # Benchmark Setup
 
-.pull-left[
+.flex[
+.w50.ph0[
 
 ## Models
 
@@ -233,7 +216,7 @@ knitr::include_graphics("https://raw.githubusercontent.com/pat-s/2019-feature-se
 - L2 penalized regression (RIDGE)
 ]
 
-.pull-right[
+.w50.ph0[
 
 ## Filters
 
@@ -251,12 +234,14 @@ knitr::include_graphics("https://raw.githubusercontent.com/pat-s/2019-feature-se
 
 - Relief
 ]
+]
 
 ---
 
 # Benchmark Setup
 
-.pull-left[
+.flex[
+.w40.ph2[
 ## Hyperparameter optimization
 
 - Model-based optimization (Bayesian)
@@ -270,7 +255,7 @@ knitr::include_graphics("https://raw.githubusercontent.com/pat-s/2019-feature-se
 
 ]
 
-.pull-right[
+.w50.ph0[
 
 ## Error Measure
 
@@ -279,6 +264,7 @@ Root Mean Square Error (RMSE)
 ## Resampling Strategy
 
  Nested 4-fold **spatial cross-validation** (plot-based)
+]
 ]
 
 ---
@@ -292,7 +278,7 @@ Results
 ---
 
 .flex[
-.w-65.br0.shadow-1.mr4[
+.w-65.br0.mr4[
 
 <center><img src="https://raw.githubusercontent.com/pat-s/2019-feature-selection/master/docs/figure/eval-performance.Rmd/performance-results-1.png" width = "710px"></center>
 
@@ -310,22 +296,20 @@ Results
 
 - RMSE ~ 34
 
-<br>
+]]
 
 `r icon::fa_arrow_right()` Too much information for a single presentation slide
-]
 
-]
 
 ---
 
 .flex[
-.w-50.mr4[
+.w-50.mr3[
 
 ```{r, echo = FALSE}
 readRDS(url("https://github.com/pat-s/2019-feature-selection/raw/master/code/98-paper/presentation/table-perf.rda"))[1:15,] %>% 
   flextable() %>% 
-  fontsize(size = 25, part = "all") %>% 
+  fontsize(size = 20, part = "all") %>% 
   color(i = 1, color = "red")
 ```
 
@@ -338,7 +322,7 @@ readRDS(url("https://github.com/pat-s/2019-feature-selection/raw/master/code/98-
 ```{r, echo = FALSE}
 readRDS(url("https://github.com/pat-s/2019-feature-selection/raw/master/code/98-paper/presentation/table-best-learner-per-task.rda")) %>% 
   flextable::flextable() %>% 
-    fontsize(size = 20, part = "all")
+    fontsize(size = 15, part = "all")
 ```
 
 <div style="height:40px;font-size:2px;">&nbsp;</div>
@@ -378,9 +362,9 @@ Effect of filter methods in general (1/3)
 
 class: center
 
-<center><img src="https://raw.githubusercontent.com/pat-s/2019-feature-selection/master/docs/figure/eval-performance.Rmd/filter-effect-1.png" width = "620px"></center>
+<center><img src="https://raw.githubusercontent.com/pat-s/2019-feature-selection/master/docs/figure/eval-performance.Rmd/filter-effect-1.png" width = "610px"></center>
 
-Model performances in RMSE when using no filter method compared to the best scoring filter method for each learner across all tasks
+Model performances in RMSE when using **no filter** method compared to the **best scoring filter** method for each learner across all tasks
 
 ---
 
@@ -393,9 +377,9 @@ Effect of ensemble filters (2/3)
 ---
 class: center, middle
 
-<center><img src="https://raw.githubusercontent.com/pat-s/2019-feature-selection/master/docs/figure/eval-performance.Rmd/filter-effect-ensemble-1.png" width = "620px"></center>
+<center><img src="https://raw.githubusercontent.com/pat-s/2019-feature-selection/master/docs/figure/eval-performance.Rmd/filter-effect-ensemble-1.png" width = "610px"></center>
 
-Model performances in RMSE when using the ensemble "Borda" filter method compared to the best scoring filter method for each learner across all tasks
+Model performances in RMSE when using the **ensemble** "Borda" filter method compared to the **best scoring filter** method for each learner across all tasks
 
 ---
 
@@ -410,33 +394,21 @@ class: center, middle
 
 <center><img src="https://raw.githubusercontent.com/pat-s/2019-feature-selection/master/docs/figure/eval-performance.Rmd/filter-perf-all-1.png" width = "620px"></center>
 
-Model performances in RMSE of all used filter methods and PCA for each learner across all tasks
+Model performances in RMSE of **all used filter methods** and PCA for each learner across all tasks
 
 ---
 
 # Summary
 
-- Almost no effect of filter for SVM
+- Almost no effect of filters for SVM
 
 - **Effect** of filters **differs** across tasks and models (no clear pattern)
 
 - **Ensemble filters** showed **no improvement** in predictive performance compared to simple filters in this study
 
-- **Statistical models** are able to reach **similar performance** as ML models in high-dim settings
+- **Statistical models** (i.e. Ridge) are able to reach **similar performance** as ML models in high-dim settings
 
 - PCA is a valid alternative to filter methods
-
----
-
-class: center, middle
-
-<iframe src="https://giphy.com/embed/3o6gDSdED1B5wjC2Gc" width="480" height="378" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-
----
-
-class: center, middle
-
-<iframe src="https://giphy.com/embed/129NVCr1UfsGTS" width="480" height="269" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
 
 ---
 
@@ -448,3 +420,42 @@ Which features are most important for predicting **defoliation**?
 
 ---
 
+```{r xaringan-themer, include = FALSE, eval = FALSE}
+options(htmltools.dir.version = FALSE)
+library(icon)
+library(xaringanthemer)
+library(magrittr)
+library(flextable)
+solarized_light(
+  outfile = here::here("2019-10-ISEM/assets/xaringan.css"),
+  header_font_google = google_font("Josefin Sans"),
+  text_font_google   = google_font("Montserrat", "500", "400i"),
+  code_font_google   = google_font("Droid Mono"),
+  title_slide_background_color = "#002733",
+  link_color = "#eb1455",
+  text_bold_color = "#00589a",
+  text_font_size = "25px",
+  header_color = "#002733",
+  padding = "1em 2em 1em 2em"
+)
+extra_css = list(
+  ".remark-slide-content h1" = list(
+    "margin-top" = "5px",
+    "margin-bottom" = "5px"
+  ),
+  ".pull-left h1 h2 h3" = list(
+    "margin-top" = "5px"
+  ),
+  ".h2nm" = list(
+    "font-size" = "45px",
+    "margin" = "0px",
+    "color" = "black"
+  ),
+  ".h1sm" = list(
+    "margin" = "5px",
+    "font-size" = "55px",
+    "color" = "black"
+  )
+)
+write_extra_css(extra_css, here::here("2019-10-ISEM/assets/css/extra.css"))
+```
