--- a/2019-10-ISEM/2019-10-ISEM.Rmd
+++ b/2019-10-ISEM/2019-10-ISEM.Rmd
@@ -131,7 +131,7 @@ Study Design
 
 # Workflow
 
-- Usage of the **R** programming language
+- Usage of the `r fa_r_project()` programming language
 
 - Completely **reproducible**
 
@@ -139,7 +139,7 @@ Study Design
 
 - Model fitting/evaluation via the .pkg[mlr] package (machine learning framework in R)
 
-- Research compendioum on [Github](https://github.com/pat-s/2019-feature-selection) and [Zenodo](https://zenodo.org/record/2633102)
+- Research compendium on [Github](https://github.com/pat-s/2019-feature-selection) and [Zenodo](https://zenodo.org/record/2633102)
 
 ---
 
@@ -467,7 +467,7 @@ solarized_light(
   outfile = here::here("2019-10-ISEM/assets/css/xaringan.css"),
   header_font_google = google_font("Josefin Sans"),
   text_font_google   = google_font("Montserrat", "500", "400i"),
-  code_font_google   = google_font("Droid Mono"),
+  code_font_google = google_font("IBM Plex Mono", "300", "400"),
   title_slide_background_color = "white",
   link_color = "#eb1455",
   text_bold_color = "#00589a",
@@ -478,7 +478,14 @@ solarized_light(
 extra_css = list(
   ".remark-slide-content h1" = list(
     "margin-top" = "5px",
-    "margin-bottom" = "5px"
+    "margin-bottom" = "5px",
+    "color" = "black"
+  ),
+  ".remark-slide-content h2" = list(
+    "color" = "black"
+  ),
+    ".remark-slide-content h3" = list(
+    "color" = "black"
   ),
   ".pull-left h1 h2 h3" = list(
     "margin-top" = "5px"
@@ -496,12 +503,13 @@ extra_css = list(
   ".title-slide" = list(
     "background-image" = "url(https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Uni-Jena-logo.svg/1200px-Uni-Jena-logo.svg.png)",
     "background-repeat" = "no-repeat",
-    "background-size" = "150px",
-    "background-position" = "bottom right",
+    "background-size" = "120px",
     "background-color" = "#fdf6e3",
-    "font-color" = "black"
+    "color" = "black",
+    "background-position-x" = "right",
+    "background-position-y" = "99%"
   ),
-  ".title-slide > h3" = list(
+  ".title-slide > h1 > h2 > h3" = list(
     "color" = "black"
   ),
   ".f25" = list(
@@ -523,6 +531,16 @@ extra_css = list(
     "font-size" = "0.4em",
     "text-align" = "center",
     "width" = "100%"
+  ),
+    ".pkg" = list(
+    "color"             = "black",
+    "font-weight"       = 400,
+    "font-size"         = "95%",
+    "font-family"       = "IBM Plex Mono",
+    "padding"             = "1px 4px",
+    "background-color"  = "#f6f8fa",
+    "border-radius"     = "4px",
+    "border"            = "1px solid #82c878"
   )
 )
 write_extra_css(extra_css, here::here("2019-10-ISEM/assets/css/extra.css"))
