use kutt.it link

--- a/2019-10-ISEM/2019-10-FSU.Rmd
+++ b/2019-10-ISEM/2019-10-FSU.Rmd
@@ -63,7 +63,7 @@ GIScience Kolloquium, October 30th 2019, Jena, Germany
 layout: true
 
 .slide-link[
-bit.ly/19-10-FSU
+slides.pjs-web.de/19-10-FSU
 ]
 
 ---
