--- a/2019-12-muenster/2019-12-muenster.Rmd
+++ b/2019-12-muenster/2019-12-muenster.Rmd
@@ -70,7 +70,7 @@ slides.pat-s.me/19-12-MS
 
 ---
 
-### About me
+# About me
 
 .pull-left[
 
@@ -79,7 +79,7 @@ knitr::include_graphics("img/ich.jpg")
 ```
 
 - M.Sc. Geoinformatics
-- Researcher at University of **Jena** and **LMU Munich**
+- Researcher at University of **Jena** and LMU **Munich**
 - PhD Candidate
 
 ]
@@ -103,40 +103,9 @@ knitr::include_graphics("img/mlr.png")
 
 ---
 
-# Study Objectives
-
-- Relate **defoliation** of trees to remote-sensing information using feature sets:
-  - Raw band information
-  - Vegetation indices
-  - Normalized ration indices
-  
-- Evaluate various (machine/statistical)-learning methods on **predictive performance**
-
-- Compare **dimension-reduction** methods (filter methods, PCA)
-
-- Analyze the effect when **combining feature sets**
-
-- **Feature importance**: Which spectral regions/variables stand out?
-
----
-
 class: inverse, center, middle
 
 # 1. Study Design
-
----
-
-# Workflow
-
-- Usage of the `r fa_r_project()` programming language.
-
-- Completely **reproducible**.
-
-- Domain-specific "makefile" approach via package .pkg[drake].
-
-- Model fitting/evaluation via package .pkg[mlr] (machine learning framework in `r fa_r_project()`).
-
-- Research compendium on [Github](https://github.com/pat-s/2019-feature-selection) and [Zenodo](https://zenodo.org/record/2633102).
 
 ---
 
@@ -162,6 +131,38 @@ Caused by pathogens:
 - _Heterobasidion annosum_
 ]
 ]
+
+---
+
+# Study Objectives
+
+- Relate **defoliation** of trees to remote-sensing information using feature sets:
+  - Raw band information
+  - Vegetation indices
+  - Normalized ration indices
+  
+- Evaluate various (machine/statistical)-learning methods on **predictive performance**
+
+- Compare **dimension-reduction** methods (filter methods, PCA)
+
+- Analyze the effect when **combining feature sets**
+
+- **Feature importance**: Which spectral regions/variables stand out?
+
+
+---
+
+# Workflow
+
+- Usage of the `r fa_r_project()` programming language.
+
+- Completely **reproducible**.
+
+- Domain-specific "makefile" approach via package .pkg[drake].
+
+- Model fitting/evaluation via package .pkg[mlr] (machine learning framework in `r fa_r_project()`).
+
+- Research compendium on [Github](https://github.com/pat-s/2019-feature-selection) and [Zenodo](https://zenodo.org/record/2633102).
 
 ---
 
@@ -330,7 +331,7 @@ class: inverse, center, middle
 
 - Substantial differences between models
 
-- RMSE ~ 34
+- RMSE ~ 31
 
 ]]]
 
@@ -345,7 +346,7 @@ class: inverse, center, middle
 ```{r, echo = FALSE}
 readRDS(url("https://github.com/pat-s/2019-feature-selection/raw/master/code/98-paper/presentation/table-perf.rda"))[1:15, ] %>%
   flextable() %>%
-  fontsize(size = 15, part = "all") %>%
+  fontsize(size = 14, part = "all") %>%
   color(i = 1, color = "red") %>%
   autofit()
 ```
@@ -376,21 +377,29 @@ readRDS(url("https://github.com/pat-s/2019-feature-selection/raw/master/code/98-
 
 `r icon::fa_arrow_right()` No practical difference between most learners regarding their overall performance
 
+--
+
 `r icon::fa_arrow_right()` Combination of feature sets does not substantially increase performance
 
-`r icon::fa_arrow_right()` HS reflectance values alone result in almost similar performance than using indices
+--
+
+`r icon::fa_arrow_right()` HS reflectance values only show the best performance for most models
+
+--
+
+`r icon::fa_arrow_right()` MBO optimization does not work well for Lasso and Ridge implementations here
 
 ---
 
 class: center, middle
 
-# 2.1 What about the filter differences?
+# What about the filter differences?
 
 ---
 
 class: center, middle
 
-# Effect of filter methods in general (1/3)
+# 2.1 Effect of filter methods in general (1/3)
 
 ---
 
@@ -404,9 +413,7 @@ Model performances in RMSE when using **no filter** method compared to the **bes
 
 class: center, middle
 
-.big-q[
-Effect of ensemble filters (2/3)
-]
+# 2.2 Effect of ensemble filters (2/3)
 
 ---
 class: center, middle
@@ -419,9 +426,7 @@ Model performances in RMSE when using the **ensemble** "Borda" filter method com
 
 class: center, middle
 
-.big-q[
-Effect of filtering by model (3/3)
-]
+# 2.3 Effect of filtering by model (3/3)
 
 ---
 class: center, middle
@@ -429,6 +434,12 @@ class: center, middle
 <center><img src="https://raw.githubusercontent.com/pat-s/2019-feature-selection/master/docs/figure/eval-performance.Rmd/filter-perf-all-1.png" width = "620px"></center>
 
 Model performances in RMSE of **all used filter methods** and PCA for each learner across all tasks
+
+---
+
+class: center, middle
+
+# 3. Summary
 
 ---
 
@@ -448,21 +459,49 @@ Model performances in RMSE of **all used filter methods** and PCA for each learn
 
 class: center, middle
 
-.big-q[
-Which features are most important for predicting **defoliation**?
-]
+# 4. Which _single features_ are most important for predicting **defoliation**?
 
 ---
 
 ## Which features are most important for predicting **defoliation**?
 
-<center><img src="imgs/work-in-progress-sign.png" width = "320px"></center>
+<center><img src="img/work-in-progress-sign.png" width = "120px"></center>
 
-`r fa_arrow_right()` Paper will be submitted soon
+`r fa_arrow_right()` All feature importance approaches struggle with highly-correlated datasets
 
-`r fa_arrow_right()` Idea: Relate most important variables (permutation-based VarImp) to spectral regions
+`r fa_arrow_right()` Least problematic: "Accumulated Local Effects" (ALE) plots
 
 .img-credit[img credit https://pogomonster.files.wordpress.com/2014/08/work-in-progress-sign.png]
+
+---
+
+# ALE plots
+
+**Partial Dependence Plots**
+
+.f20[
+  > See what the model predicts on average when each data instance has the **value `v` for feature X**, igoring whether `v` makes sense for all data instances.
+]
+
+**Marginal-Plots**
+
+.f20[
+  > See what the model predicts on average for data instances that have values **close to `v` for feature X**. The effect could be due to that feature, but also due to correlated features.
+]
+
+
+**ALE plots**
+
+.f20[
+> See how the model predictions change in a **small ”window" of the feature around `v`** for data instances in that window.
+]
+
+
+<br>
+.f15[
+Source: https://christophm.github.io/interpretable-ml-book/ale.html
+]
+
 
 ```{r xaringan-themer, include = FALSE, eval = FALSE}
 options(htmltools.dir.version = FALSE)
